@@ -15,7 +15,7 @@
   </cells>
   <netlist>
     <module fl="d7" loc="d,7,8,7,9" name="m" origName="m">
-      <var fl="d8" loc="d,8,10,8,13" name="clk" tag="foo_op" dtype_id="1" dir="input" vartype="logic" origName="clk"/>
+      <var fl="d8" loc="d,8,10,8,13" name="clk" tag="foo_op" dtype_id="1" dir="input" pinIndex="1" vartype="logic" origName="clk"/>
     </module>
     <typetable fl="a0" loc="a,0,0,0,0">
       <basicdtype fl="d8" loc="d,8,10,8,13" id="1" name="logic"/>
